# gallagher-restapi

./: .gitignore  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/gallagher_restapi/: client.py  models.py
tests/: __init__.py  conftest.py  fixture.json  ruff.toml  test_access_zones.py  test_alarm_zones.py  test_cardholder_methods.py  test_client.py  test_fence_zones.py  test_inputs.py  test_items.py  test_lockers.py  test_model.py  test_operator_groups.py  test_outputs.py
tests/fixtures/: access_groups.json  access_zone.json  alarm_zone.json  api.json  card_type.json  cardholder.json  cardholder_changes.json  door.json  fence_zone.json  input.json  item_status.json  item_types.json  items.json  locker.json  locker_banks.json  operator_group_members.json  operator_groups.json  output.json  personal_data_fields.json
tests/models/: test_model.py
