[project]
name = "gallagher-restapi"
version = "2.1.0"
description = "Python library for Gallagher REST API"
authors = [{ name = "Rami Mousleh", email = "rami.mousleh@gallagher-me.com" }]
requires-python = ">=3.11"
license = "MIT"
readme = "README.rst"
dependencies = ["httpx>=0.28.1,<1.0.0", "pydantic>=2.12.5,<3.0.0"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "mypy>=1.20.2",
    "respx==0.23.1",
]

[build-system]
requires = ["uv-build>=0.8.13"]
build-backend = "uv_build"


[tool.pylint.MAIN]
py-version = "3.11"
load-plugins = ["pylint.extensions.code_style", "pylint.extensions.typing"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name",                  # N815
    "line-too-long",                 # E501, disabled globally
    "too-many-arguments",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-positional-arguments",
    "too-many-branches",             # PLR0912
    "redefined-builtin",             # A001
    "protected-access",              # SLF001
    "no-member",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_debug = true
asyncio_mode = "auto"
